welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
		recule()
                      ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
			recule()
                              ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if (getCouleurSol()!=Color.green) {
                ^